src/styles/global.css
@import "tailwindcss";

@font-face {
  font-family: "BobbyJones";
  src: url("/fonts/BobbyJonesSoft.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@theme {
  --breakpoint-xs: 375px;

  --font-title: "BobbyJones", sans-serif;
  --font-body: "Nunito Variable", sans-serif;

  --z-index-navbar: 50;
  --z-index-cta: 30;

  --spacing-navbar: 132px;
}

@layer base {
  @keyframes shimmer-vertical {
    0% {
      transform: translateY(-100%);
    }
    100% {
      transform: translateY(100%);
    }
  }

  html {
    font-family: var(--font-body);
    scroll-behavior: smooth;
    @apply bg-[#85CBCC];
  }

  body {
    position: relative;
  }

  h1,
  h2 {
    font-family: var(--font-title);
  }

  section {
    scroll-margin-top: var(--spacing-navbar);
  }

  button {
    cursor: pointer;
  }
}

